--- a/index.html
+++ b/index.html
@@ -111,6 +111,56 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+      <div class = 'article'>
+        <h2>Dany Got Targaryen Madness</h2>
+        <p class = 'date'>7th of the Mother, Long Summer</p>
+        <p>The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended.</p>
+        <p>The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended. The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended.</p>
+        <p>The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended. The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended.</p>
+        <p>The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended. The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended.</p>
+        <p>The bear and the maiden fair. A Lannister always pays his debts. The winds of Winter. What is dead may never die. As High as Honor. And now his watch is ended. The War of the 5 kings. The battle of the redgrass field. King in the North. And now his watch is ended.</p>
+        <span class='expandButton'></span>
+      </div>
+      <div class = 'article'>
+        <h2>Grey Worm Will Kill The Mountain</h2>
+        <p class = 'date'>Calling It, Right Now</p>
+        <p>Words are like wind. Never Resting. The rains of castamere. More pigeon pie, please. As High as Honor. The rains of castamere. What is dead may never die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The rains of castamere. Fire and blood. The North remembers. Forgive my manners. I don't see many ladies these days. Lucky for the ladies. Pay the iron price. When you play the game of thrones, you win or you die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The bear and the maiden fair. The War of the 5 kings. The North remembers. House Tarly of Horn Hill The rains of castamere. What is dead may never die. A Lannister always pays his debts. I would like a trial by combat. Our Sun Shines Bright. A dream of Spring. Unbowed, Unbent, Unbroken. The wolf and the lion. Fire and blood. The winds of Winter. The battle of the redgrass field.</p>
+        <p>Words are like wind. Never Resting. The rains of castamere. More pigeon pie, please. As High as Honor. The rains of castamere. What is dead may never die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The rains of castamere. Fire and blood. The North remembers. Forgive my manners. I don't see many ladies these days. Lucky for the ladies. Pay the iron price. When you play the game of thrones, you win or you die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The bear and the maiden fair. The War of the 5 kings. The North remembers. House Tarly of Horn Hill The rains of castamere. What is dead may never die. A Lannister always pays his debts. I would like a trial by combat. Our Sun Shines Bright. A dream of Spring. Unbowed, Unbent, Unbroken. The wolf and the lion. Fire and blood. The winds of Winter. The battle of the redgrass field.</p>
+        <p>Words are like wind. Never Resting. The rains of castamere. More pigeon pie, please. As High as Honor. The rains of castamere. What is dead may never die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The rains of castamere. Fire and blood. The North remembers. Forgive my manners. I don't see many ladies these days. Lucky for the ladies. Pay the iron price. When you play the game of thrones, you win or you die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The bear and the maiden fair. The War of the 5 kings. The North remembers. House Tarly of Horn Hill The rains of castamere. What is dead may never die. A Lannister always pays his debts. I would like a trial by combat. Our Sun Shines Bright. A dream of Spring. Unbowed, Unbent, Unbroken. The wolf and the lion. Fire and blood. The winds of Winter. The battle of the redgrass field.</p>
+        <p>Words are like wind. Never Resting. The rains of castamere. More pigeon pie, please. As High as Honor. The rains of castamere. What is dead may never die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The rains of castamere. Fire and blood. The North remembers. Forgive my manners. I don't see many ladies these days. Lucky for the ladies. Pay the iron price. When you play the game of thrones, you win or you die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The bear and the maiden fair. The War of the 5 kings. The North remembers. House Tarly of Horn Hill The rains of castamere. What is dead may never die. A Lannister always pays his debts. I would like a trial by combat. Our Sun Shines Bright. A dream of Spring. Unbowed, Unbent, Unbroken. The wolf and the lion. Fire and blood. The winds of Winter. The battle of the redgrass field.</p>
+        <p>Words are like wind. Never Resting. The rains of castamere. More pigeon pie, please. As High as Honor. The rains of castamere. What is dead may never die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The rains of castamere. Fire and blood. The North remembers. Forgive my manners. I don't see many ladies these days. Lucky for the ladies. Pay the iron price. When you play the game of thrones, you win or you die. A good act does not wash out the bad, nor a bad act the good. Each should have its own reward. The bear and the maiden fair. The War of the 5 kings. The North remembers. House Tarly of Horn Hill The rains of castamere. What is dead may never die. A Lannister always pays his debts. I would like a trial by combat. Our Sun Shines Bright. A dream of Spring. Unbowed, Unbent, Unbroken. The wolf and the lion. Fire and blood. The winds of Winter. The battle of the redgrass field.</p>
+        <span class='expandButton'></span>
+      </div>
+      <div class = 'article'>
+        <h2>And Now The Rains</h2>
+        <p class = 'date'>Weep O'er His Halls</p>
+        <p>A coat of gold, a coat of red
+          A lion still has claws
+          And mine are long and sharp, my Lord
+          As long and sharp as yours
+          And so he spoke, and so he spoke
+          That Lord of Castamere
+          And now the rains weep o'er his halls
+          With no one there to hear
+          Yes, now the rains weep o'er his halls
+          And not a soul to hear</p>
+        <p>A coat of gold, a coat of red
+          A lion still has claws
+          And mine are long and sharp, my Lord
+          As long and sharp as yours
+          And so he spoke, and so he spoke
+          That Lord of Castamere
+          And now the rains weep o'er his halls
+          With no one there to hear
+          Yes, now the rains weep o'er his halls
+          And not a soul to hear</p>
+          <p>Whether coat of Gold, or Coat of Red--a Lion still has Claws.</p>
+          <p>And Mine are Long and Sharp, my Lord, as Long and Sharp as yours.</p>
+          <p>And so he spoke, And so he spoke, that Lord of Cast-A-Mere.</p>
+          <p>And now the Rains, Weep O'er his hall, with not a Soul to Hear.</p>
+        <span class='expandButton'></span>
+      </div>
+      </div>
     </div>
   </body>
 </html>
